<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/countryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cityTextView"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/celsiusTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/temperatureTextView"
            android:layout_toRightOf="@+id/temperatureTextView"
            android:gravity="top"
            android:text="@string/fontello_icon_celsius"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/umbrellaTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/humidityTextView"
            android:layout_toStartOf="@+id/humidityTextView"
            android:gravity="center"
            android:text="@string/fontello_icon_humidity"
            android:textColor="@color/blue"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="2dp"
            android:layout_toLeftOf="@+id/pressureIconTextView"
            android:layout_toStartOf="@+id/pressureIconTextView"
            android:gravity="center"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/pressureIconTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toLeftOf="@+id/pressureTextView"
            android:layout_toStartOf="@+id/pressureTextView"
            android:gravity="center"
            android:text="@string/fontello_icon_pressure"
            android:textColor="@color/yellow"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:textSize="16sp" />


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="45dp">


    </android.support.v7.widget.RecyclerView>

</LinearLayout>